@@ -1,6 +1,6 @@
 @echo off
 REM
-REM  Copyright (c) 2017, 2018 Oracle and/or its affiliates. All rights reserved.
+REM  Copyright (c) 2017, 2020 Oracle and/or its affiliates. All rights reserved.
 REM
 REM  This program and the accompanying materials are made available under the
 REM  terms of the Eclipse Public License v. 2.0, which is available at
@@ -21,12 +21,8 @@ if "%JAXB_HOME%" == "" (
    echo JAXB_HOME must be set before running this script
 )
 
-if "%JAXB_ENDORSED%" == "" (
-   echo JAXB_ENDORSED must be set before running this script
-)
-
-echo %JAVA_HOME%\bin\java -Djava.endorsed.dirs=%JAXB_ENDORSED% -cp %CLASSPATH% com.sun.jaxb_tck.lib.JaxbCommand -jxc %SCHEMAGEN_REALIZATION%  - %* 
-%JAVA_HOME%\bin\java -Djava.endorsed.dirs=%JAXB_ENDORSED% -cp %CLASSPATH% com.sun.jaxb_tck.lib.JaxbCommand -jxc %SCHEMAGEN_REALIZATION%  - %* 
+echo %JAVA_HOME%\bin\java -cp %CLASSPATH% com.sun.jaxb_tck.lib.JaxbCommand -jxc %SCHEMAGEN_REALIZATION%  - %* 
+%JAVA_HOME%\bin\java -cp %CLASSPATH% com.sun.jaxb_tck.lib.JaxbCommand -jxc %SCHEMAGEN_REALIZATION%  - %* 
 
 exit %ERRORLEVEL%
 
